codegen/tests/fail/delegate/where_clause_without_generics.stderr
error[E0412]: cannot find type `U` in this scope
  --> tests/fail/delegate/where_clause_without_generics.rs:20:14
   |
20 | enum Profile<U> {
   |              ^ not found in this scope

error[E0412]: cannot find type `U` in this scope
  --> tests/fail/delegate/where_clause_without_generics.rs:18:9
   |
18 |         U: Named<String> + 'static;
   |         ^ not found in this scope
